--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1-1/int11-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1-1/int11-1-1.component.html
@@ -6,7 +6,7 @@
   <div class="sixteen wide column">
 
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>เพิ่มรายการติดตามผลการตรวจสอบของโครงการ</span>
+      <span>{{headerName}}</span>
     </div>
 
     <div class="ui attached segment">
@@ -48,8 +48,8 @@
             <div class="ui calendar calendar-picker" style="width: 100%;">
               <div class="ui input left icon">
                 <i class="time icon"></i>
-                <input type="text" id="informRectorDate" name="informRectorDate" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป"
-                  [attr.required]="true">
+                <input type="text" id="informRectorDate" name="informRectorDate" autocomplete="off" [attr.readonly]="null"
+                  placeholder="วว/ดด/ปปปป" [attr.required]="true">
               </div>
             </div>
           </div>
@@ -78,8 +78,8 @@
             <div class="ui calendar calendar-picker" style="width: 100%;">
               <div class="ui input left icon">
                 <i class="time icon"></i>
-                <input type="text" id="followUp1Date" name="followUp1Date" (blur)="autoShiftDateFollowFirst()" autocomplete="off" [attr.readonly]="null"
-                  placeholder="วว/ดด/ปปปป" [attr.required]="true">
+                <input type="text" id="followUp1Date" name="followUp1Date" (blur)="autoShiftDateFollowFirst()"
+                  autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
               </div>
             </div>
           </div>
@@ -100,8 +100,8 @@
             <div class="ui calendar calendar-picker" style="width: 100%;">
               <div class="ui input left icon">
                 <i class="time icon"></i>
-                <input type="text" id="maturity145" name="maturity145" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป"
-                  [attr.required]="true" disabled>
+                <input type="text" id="maturity145" name="maturity145" autocomplete="off" [attr.readonly]="null"
+                  placeholder="วว/ดด/ปปปป" [attr.required]="true" disabled>
               </div>
             </div>
           </div>
@@ -114,8 +114,8 @@
             <div class="ui calendar calendar-picker" style="width: 100%;">
               <div class="ui input left icon">
                 <i class="time icon"></i>
-                <input type="text" id="maturity160" name="maturity160" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป"
-                  [attr.required]="true" disabled>
+                <input type="text" id="maturity160" name="maturity160" autocomplete="off" [attr.readonly]="null"
+                  placeholder="วว/ดด/ปปปป" [attr.required]="true" disabled>
               </div>
             </div>
           </div>
@@ -144,8 +144,8 @@
             <div class="ui calendar calendar-picker" style="width: 100%;">
               <div class="ui input left icon">
                 <i class="time icon"></i>
-                <input type="text" id="performance1Date" name="performance1Date" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป"
-                  [attr.required]="true">
+                <input type="text" id="performance1Date" name="performance1Date" autocomplete="off" [attr.readonly]="null"
+                  placeholder="วว/ดด/ปปปป" [attr.required]="true">
               </div>
             </div>
           </div>
@@ -174,8 +174,8 @@
             <div class="ui calendar calendar-picker" style="width: 100%;">
               <div class="ui input left icon">
                 <i class="time icon"></i>
-                <input type="text" id="trackResult1Date" name="trackResult1Date" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป"
-                  [attr.required]="true">
+                <input type="text" id="trackResult1Date" name="trackResult1Date" autocomplete="off" [attr.readonly]="null"
+                  placeholder="วว/ดด/ปปปป" [attr.required]="true">
               </div>
             </div>
           </div>
@@ -204,8 +204,8 @@
             <div class="ui calendar calendar-picker" style="width: 100%;">
               <div class="ui input left icon">
                 <i class="time icon"></i>
-                <input type="text" id="followUp2Date" name="followUp2Date" (blur)="autoShiftDateFollowSecond()" autocomplete="off" [attr.readonly]="null"
-                  placeholder="วว/ดด/ปปปป" [attr.required]="true">
+                <input type="text" id="followUp2Date" name="followUp2Date" (blur)="autoShiftDateFollowSecond()"
+                  autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
               </div>
             </div>
           </div>
@@ -226,8 +226,8 @@
             <div class="ui calendar calendar-picker" style="width: 100%;" (change)="changeStatus()">
               <div class="ui input left icon">
                 <i class="time icon"></i>
-                <input type="text" id="maturity260" name="maturity260" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป"
-                  [attr.required]="true" disabled>
+                <input type="text" id="maturity260" name="maturity260" autocomplete="off" [attr.readonly]="null"
+                  placeholder="วว/ดด/ปปปป" [attr.required]="true" disabled>
               </div>
             </div>
           </div>
@@ -257,8 +257,8 @@
             <div class="ui calendar calendar-picker" style="width: 100%;">
               <div class="ui input left icon">
                 <i class="time icon"></i>
-                <input type="text" id="performance2Date" name="performance2Date" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป"
-                  [attr.required]="true">
+                <input type="text" id="performance2Date" name="performance2Date" autocomplete="off" [attr.readonly]="null"
+                  placeholder="วว/ดด/ปปปป" [attr.required]="true">
               </div>
             </div>
           </div>
@@ -287,8 +287,8 @@
             <div class="ui calendar calendar-picker" style="width: 100%;">
               <div class="ui input left icon">
                 <i class="time icon"></i>
-                <input type="text" id="trackResult2Date" name="trackResult2Date" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป"
-                  [attr.required]="true">
+                <input type="text" id="trackResult2Date" name="trackResult2Date" autocomplete="off" [attr.readonly]="null"
+                  placeholder="วว/ดด/ปปปป" [attr.required]="true">
               </div>
             </div>
           </div>
@@ -317,8 +317,8 @@
             <div class="ui calendar calendar-picker" style="width: 100%;">
               <div class="ui input left icon">
                 <i class="time icon"></i>
-                <input type="text" id="followUp3Date" name="followUp3Date" (blur)="autoShiftDateFollowThird()" autocomplete="off" [attr.readonly]="null"
-                  placeholder="วว/ดด/ปปปป" [attr.required]="true">
+                <input type="text" id="followUp3Date" name="followUp3Date" (blur)="autoShiftDateFollowThird()"
+                  autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
               </div>
             </div>
           </div>
@@ -339,8 +339,8 @@
             <div class="ui calendar calendar-picker" style="width: 100%;" (change)="changeStatus()">
               <div class="ui input left icon">
                 <i class="time icon"></i>
-                <input type="text" id="maturity360" name="maturity360" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป"
-                  [attr.required]="true" disabled>
+                <input type="text" id="maturity360" name="maturity360" autocomplete="off" [attr.readonly]="null"
+                  placeholder="วว/ดด/ปปปป" [attr.required]="true" disabled>
               </div>
             </div>
           </div>
@@ -370,8 +370,8 @@
             <div class="ui calendar calendar-picker" style="width: 100%;">
               <div class="ui input left icon">
                 <i class="time icon"></i>
-                <input type="text" id="performance3Date" name="performance3Date" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป"
-                  [attr.required]="true">
+                <input type="text" id="performance3Date" name="performance3Date" autocomplete="off" [attr.readonly]="null"
+                  placeholder="วว/ดด/ปปปป" [attr.required]="true">
               </div>
             </div>
           </div>
@@ -400,8 +400,8 @@
             <div class="ui calendar calendar-picker" style="width: 100%;">
               <div class="ui input left icon">
                 <i class="time icon"></i>
-                <input type="text" id="trackResult3Date" name="trackResult3Date" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป"
-                  [attr.required]="true">
+                <input type="text" id="trackResult3Date" name="trackResult3Date" autocomplete="off" [attr.readonly]="null"
+                  placeholder="วว/ดด/ปปปป" [attr.required]="true">
               </div>
             </div>
           </div>
@@ -438,8 +438,7 @@
 
       </div>
     </div>
-    <br/>
+    <br />
 
   </div>
 </div>
-
