--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
@@ -60,7 +60,7 @@
               <i class="refresh icon"></i>
               ล้างข้อมูล
             </button>
-            <button type="button" [routerLink]="'/int02/2'" class="ui mini primary button">
+            <button type="button" [routerLink]="'/int02/2'" class="ui mini green button">
               <i class="add icon"></i>
               รายการใหม่
             </button>
