--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
@@ -40,7 +40,7 @@
               <i class="refresh icon"></i>
               ล้างข้อมูล
             </button>
-            <button class="ui mini primary button" (click)="createBudgetYear()" >
+            <button class="ui mini green button" (click)="createBudgetYear()" >
               <i class="add icon"></i>
               รายการใหม่
             </button>
