--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-1/int08-3-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-1/int08-3-1.component.html
@@ -38,14 +38,14 @@
       <div class="ui center aligned grid">
         <div class="sixteen wide column">
           <button class="ui mini primary button" (click)="searchDataTable()">
-            <i class="add icon"></i>
+            <i class="search icon"></i>
             ค้นหา
           </button>
           <button class="ui mini button" (click)="clearData()">
             <i class="refresh icon"></i>
             ล้างข้อมูล
           </button>
-          <button class="ui mini primary button" (click)="createBudgetYear()">
+          <button class="ui mini green button" (click)="createBudgetYear()">
             <i class="add icon"></i>
             รายการใหม่
           </button>
