--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-8/int01-8-1/int01-8-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-8/int01-8-1/int01-8-1.component.html
@@ -78,40 +78,37 @@
             </div>
           </div>
 
+
         </div>
       </form>
+      <br />
+      <br />
+      <div id="Int0181">
+        <table id="dataTable" class="ui  small celled table striped selectable">
+          <thead>
+            <tr style="text-align: center;">
+              <th>ลำดับที่</th>
+              <th>วัน/เดือน/ปี ที่จัดเก็บรายได้</th>
+              <th>จำนวนเงินที่จัดเก็บ</th>
+              <th>วัน/เดือน/ปี ที่นำเงินฝากบัญชีพัก</th>
+              <th>วัน/เดือนปี ที่นำเงินฝากคลัง</th>
+              <th>จำนวนเงินที่ฝากคลัง</th>
+            </tr>
+          </thead>
+
+        </table>
+
+        <div class="eight wide center aligned column">
+          <button class="ui mini primary button width-100" [routerLink]="[ '/home'] ">
+            <i class="save  icon"></i>
+            ยกเลิก
+          </button>
+          <button class="ui mini primary button width-100" [routerLink]="[ '/int07/2'] ">
+            <i class="clipboard check icon"></i>
+            ส่งออก
+          </button>
+        </div>
+      </div>
     </div>
   </div>
-</div>
-
-
-<div class="ui attached segment" id="Int0181">
-  <table class="ui  small celled table striped selectable">
-    <thead>
-      <tr style="text-align: center;">
-        <th>ลำดับที่</th>
-        <th>วัน/เดือน/ปี ที่จัดเก็บรายได้</th>
-        <th>จำนวนเงินที่จัดเก็บ</th>
-        <th>วัน/เดือน/ปี ที่นำเงินฝากบัญชีพัก</th>
-        <th>วัน/เดือนปี ที่นำเงินฝากคลัง</th>
-        <th>จำนวนเงินที่ฝากคลัง</th>
-      </tr>
-    </thead>
-
-  </table>
-
-
-  <div class="ui center aligned grid">
-    <div class="eight wide column">
-      <button class="ui mini primary button width-100" [routerLink]="[ '/home'] ">
-        <i class="save  icon"></i>
-        ยกเลิก
-      </button>
-      <button class="ui mini primary button width-100" [routerLink]="[ '/int07/2'] ">
-        <i class="clipboard check icon"></i>
-        ส่งออก
-      </button>
-    </div>
-  </div>
-
 </div>
