commit breadcrumb ตรวจปฎิบัติการ

--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop02/cop02-1/cop02-1-1/cop02-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop02/cop02-1/cop02-1-1/cop02-1-1.component.html
@@ -1,3 +1,6 @@
+
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
+
 <div class="ui grid">
   <div class="sixteen wide column">
     <h2 class="ui header">ข้อมูลวิเคราะห์รายได้ ตามแผนการตรวจสอบภาษี
