--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06-4/cop06-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06-4/cop06-4.component.html
@@ -1,3 +1,5 @@
+
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <div class="ui grid">
   <div class="sixteen wide column">
     <h2 class="ui header"> รายงานการตรวจปฏิบัติการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02) </h2>
