--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop01/cop01-2/cop01-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop01/cop01-2/cop01-2.component.html
@@ -1,3 +1,6 @@
+
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
+
 <div class="ui grid">
     <div class="sixteen wide column">
         <h2 class="ui header">ค้นหาแผนการตรวจปฏิบัติการ</h2>
