--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop02/cop02-1/cop02-1-2/cop02-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop02/cop02-1/cop02-1-2/cop02-1-2.component.html
@@ -1,3 +1,5 @@
+
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <div class="ui grid">
   <div class="sixteen wide column">
     <h2 class="ui header">แบบคำขอจดทะเบียนสรรพสามิต (ภส. 01 - 01)	
