--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop03/cop03-1/cop03-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop03/cop03-1/cop03-1.component.html
@@ -1,3 +1,7 @@
+
+
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
+
 <div class="ui grid">
   <div class="sixteen wide column">
     <h2 class="ui header">หนังสือขออนุมัติเดินทางไปราชการตรวจปฏิบัติการ </h2>
