--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06-1/cop06-1-2/cop06-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06-1/cop06-1-2/cop06-1-2.component.html
@@ -1,3 +1,4 @@
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <div class="ui grid">
   <div class="sixteen wide column">
       <h2 class="ui header">รายงานการตรวจปฏิบัติการตรวจนับวัตถุดิบคงเหลือ</h2>
