--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06-5/cop06-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06-5/cop06-5.component.html
@@ -1,3 +1,5 @@
+
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <div class="ui grid">
   <div class="sixteen wide column">
     <h2 class="ui header"> รายงานการตรวจปฏิบัติการจ่ายสินค้าสำเร็จรูปต่างประเทศ</h2>
