--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop05/cop05-1/cop05-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop05/cop05-1/cop05-1.component.html
@@ -1,4 +1,7 @@
+
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <div class="ui grid">
+
   <div class="sixteen wide column">
     <h2 class="ui header">รายงานผลการตรวจปฏิบัติการ
     </h2>
